recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: unclosed comment
	/*gauche(2*angle)
        ^Tree:2: error: Missing closing brace `}' assumed here
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^Tree:29: error: Missing closing brace `}' assumed here
}
  ^